--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
     "chart.js": "^4.4.8",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
-    "next": "15.2.4",
+    "msnodesqlv8": "^4.5.0",
+    "mssql": "^11.0.1",
+    "next": "^15.3.0",
     "pg": "^8.14.1",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "sequelize": "^6.37.6"
+    "react-dom": "^19.1.0",
+    "sequelize": "^6.37.6",
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8",
+    "tedious": "^18.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
